--- a/account-service.yml
+++ b/account-service.yml
@@ -2,3 +2,13 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+
+accountservice: 
+  cassandra:
+    contact:
+      point: localhost
+    port: 9042
+    username: cassandra
+    password: cassandra
+    keyspace:
+      name: ticketsystem
