--- a/ticket-service.yml
+++ b/ticket-service.yml
@@ -3,6 +3,24 @@ server:
 
 eureka:
   client:
+    instance:
+      hostname: ${EUREKA_SERVER_HOST:localhost}
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 
+spring:
+  datasource:
+    url: ${MYSQL_URL:jdbc:mysql://localhost:3306/ticketsystem}
+    username: ${MYSQL_URL:root}
+    password: ${MYSQL_URL:ticketsystem}
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: update
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
