--- a/account-service.yml
+++ b/account-service.yml
@@ -3,8 +3,10 @@ server:
 
 eureka:
   client:
+    instance:
+      hostname: ${EUREKA_SERVER_HOST:localhost}
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 
 accountservice: 
   cassandra:
