--- a/notification-service.yml
+++ b/notification-service.yml
@@ -14,7 +14,7 @@ spring:
     username: eokumus
     password: eokumus
     host: localhost
-    port: 
+    port: 5672
   cloud:
     stream:
       bindings:
