--- a/ticket-service.yml
+++ b/ticket-service.yml
@@ -28,6 +28,9 @@ spring:
       bindings:
         output: #kuyruğa publish edecek olan
           destination: ticketnotificationqueue
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
 
 management:
   endpoints:
