--- a/account-service.yml
+++ b/account-service.yml
@@ -1,6 +1,11 @@
 server:
   port: 8081
 
+spring:
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
+
 eureka:
   client:
     instance:
