--- a/ticket-service.yml
+++ b/ticket-service.yml
@@ -31,8 +31,12 @@ spring:
   zipkin:
     base-url: http://localhost:9411/
     enabled: true
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084 #admin server port
 
-management:
+management: #production ortamında buna dıkkat etmek lazım
   endpoints:
     web:
       exposure:
