--- a/account-service.yml
+++ b/account-service.yml
@@ -5,6 +5,10 @@ spring:
   zipkin:
     base-url: http://localhost:9411/
     enabled: true
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084 #admin server port
 
 eureka:
   client:
@@ -22,3 +26,9 @@ accountservice:
     password: cassandra
     keyspace:
       name: ticketsystem
+
+management: #production ortamında buna dıkkat etmek lazım
+  endpoints:
+    web:
+      exposure:
+        include: "*"
