--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -5,8 +5,18 @@ spring:
   zipkin:
     base-url: http://localhost:9411/
     enabled: true
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084 #admin server port
   
 eureka:
   client:
     fetchRegistry: false
     registerWithEureka: false
+
+management: #production ortamında buna dıkkat etmek lazım
+  endpoints:
+    web:
+      exposure:
+        include: "*"
