--- a/notification-service.yml
+++ b/notification-service.yml
@@ -5,6 +5,10 @@ spring:
   zipkin:
     base-url: http://localhost:9411/
     enabled: true
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084 #admin server port
 
 eureka:
   client:
@@ -25,4 +29,10 @@ spring:
       bindings:
         input:  #kuyruğu dinleyen
           destination: ticketnotificationqueue
+
+management: #production ortamında buna dıkkat etmek lazım
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
