--- a/ticket-service.yml
+++ b/ticket-service.yml
@@ -11,16 +11,16 @@ eureka:
 spring:
   datasource:
     url: ${MYSQL_URL:jdbc:mysql://localhost:3307/ticketsystem}
-    username: ${MYSQL_URL:root}
-    password: ${MYSQL_URL:ticketsystem}
+    username: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD:ticketsystem}
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: update
   rabbitmq:
-    username: eokumus
-    password: eokumus
+    username: ${RABBİTMQ_USERNAME:eokumus}
+    password: ${RABBİTMQ_PASSWORD:eokumus}
     host: localhost
     port: 5672
   cloud:
@@ -29,12 +29,12 @@ spring:
         output: #kuyruğa publish edecek olan
           destination: ticketnotificationqueue
   zipkin:
-    base-url: http://localhost:9411/
+    base-url: ${ZIPKIN_SERVER_URL:http://localhost:9411/}
     enabled: true
   boot:
     admin:
       client:
-        url: http://localhost:8085 #admin server port
+        url: ${SPRING_BOOT_ADMIN_SERVER_URL:http://localhost:8085} #admin server port
 
 management: #production ortamında buna dıkkat etmek lazım
   endpoints:
