--- a/account-service.yml
+++ b/account-service.yml
@@ -3,12 +3,12 @@ server:
 
 spring:
   zipkin:
-    base-url: http://localhost:9411/
+    base-url: ${ZIPKIN_SERVER_URL:http://localhost:9411/}
     enabled: true
   boot:
     admin:
       client:
-        url: http://localhost:8085 #admin server port
+        url: ${SPRING_BOOT_ADMIN_SERVER_URL:http://localhost:8085} #admin server port
 
 eureka:
   client:
@@ -20,12 +20,12 @@ eureka:
 accountservice: 
   cassandra:
     contact:
-      point: localhost
-    port: 9042
-    username: cassandra
-    password: cassandra
+      point: ${CASSANDRA_SERVER_HOST:localhost}
+    port: ${CASSANDRA_SERVER_PORT:9042}
+    username: ${CASSANDRA_SERVER_USERNAME:cassandra}
+    password: ${CASSANDRA_SERVER_PASSWORD:cassandra}
     keyspace:
-      name: ticketsystem
+      name: ${CASSANDRA_SERVER_KEYSPACE:ticketsystem}
 
 management: #production ortamında buna dıkkat etmek lazım
   endpoints:
