--- a/notification-service.yml
+++ b/notification-service.yml
@@ -3,12 +3,12 @@ server:
 
 spring:
   zipkin:
-    base-url: http://localhost:9411/
+    base-url: ${ZIPKIN_SERVER_URL:http://localhost:9411/}
     enabled: true
   boot:
     admin:
       client:
-        url: http://localhost:8085 #admin server port
+        url: ${SPRING_BOOT_ADMIN_SERVER_URL:http://localhost:8085} #admin server port
 
 eureka:
   client:
@@ -20,8 +20,8 @@ eureka:
 #RabbitMQ için konfigürasyon ayarları.
 spring:
   rabbitmq:
-    username: eokumus
-    password: eokumus
+    username: ${RABBİTMQ_USERNAME:eokumus}
+    password: ${RABBİTMQ_PASSWORD:eokumus}
     host: localhost
     port: 5672
   cloud:
